logs/mobility/build.make.045.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doFreeMovementStuff()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:480:1: error: ‘i’ was not declared in this scope
 i
 ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:482:1: error: expected ‘;’ before ‘if’
 if (distanceFromGoalTho < 0.30 && !reachedGoalLocation && !isDoingDriveOnTimer) 
 ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:935:1: error: expected ‘}’ at end of input
 }
 ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
